apps/base/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: keycloak
spec:
  ingressClassName: nginx
  rules:
  - host: REPLACE_ME
    http:
      paths:
      - backend:
          service:
            name: keycloak-service
            port:
              number: 8443
        pathType: Prefix
        path: /
  tls:
  - hosts:
    - REPLACE_ME
    secretName: keycloak-tls
